ui: css: fix text-align pmx-button-badge
this was previously set on the button class, but has since been removed
add it here to have the badge number centered again

--- a/www/css/ext6-pbs.css
+++ b/www/css/ext6-pbs.css
@@ -202,6 +202,7 @@ p.logs {
 
 .pmx-button-badge {
     display: inline-block;
+    text-align: center;
     font-weight: bold;
     border-radius: 4px;
     padding: 2px 3px;
